# pubmed-pharma-paper-finder

./: .gitignore  PYPI_README.md  README.md  pyproject.toml
pubmed_pharma_paper_finder/: __init__.py  cli.py  core.py
tests/: simple-test.py  test_mock.py
